--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <h2>The Basic Language of the Web: HTML</h2>
 
         <img
-          src="..Images/laura-jones.jpg"
+          src="Images/laura-jones.jpg"
           alt="headshot of laura"
           height="50"
           width="50"
@@ -33,7 +33,7 @@
         </p>
 
         <img
-          src="..Images/post-img.jpg"
+          src="Images/post-img.jpg"
           alt="html code on a screen"
           height="200"
           width="500"
@@ -105,7 +105,7 @@
       <ul class="related">
         <li>
           <img
-            src="..Images/related-1.jpg"
+            src="Images/related-1.jpg"
             alt="person programming"
             height="75"
             width="75"
@@ -116,7 +116,7 @@
 
         <li>
           <img
-            src="..Images/related-2.jpg"
+            src="Images/related-2.jpg"
             alt="lightning"
             height="75"
             width="75"
@@ -126,7 +126,7 @@
         </li>
 
         <li>
-          <img src="..Images/related-3.jpg" alt="" height="75" width="75" />
+          <img src="Images/related-3.jpg" alt="" height="75" width="75" />
           <a href="#">Why Javascript is Awesome</a>
           <p class="related-author">By Matilda</p>
         </li>
