--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <h2>The Basic Language of the Web: HTML</h2>
 
         <img
-          src="Images/laura-jones.jpg"
+          src="https://user-images.githubusercontent.com/102797630/168083080-cd22cc6d-3b12-4e20-8b8c-5a3707de7ae9.jpg"
           alt="headshot of laura"
           height="50"
           width="50"
