--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </p>
 
         <img
-          src="Images/post-img.jpg"
+          src="https://user-images.githubusercontent.com/102797630/168083054-00532e3c-f839-482c-bfa5-07f29f1db05f.jpg"
           alt="html code on a screen"
           height="200"
           width="500"
