--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       <ul class="related">
         <li>
           <img
-            src="Images/related-1.jpg"
+            src="https://user-images.githubusercontent.com/102797630/168083063-085036cd-e84f-47bf-b59e-fa576b51d8e2.jpg"
             alt="person programming"
             height="75"
             width="75"
@@ -116,7 +116,7 @@
 
         <li>
           <img
-            src="Images/related-2.jpg"
+            src="https://user-images.githubusercontent.com/102797630/168083067-58d17a68-2839-4b21-ad28-aeed749ef871.jpg"
             alt="lightning"
             height="75"
             width="75"
@@ -126,7 +126,12 @@
         </li>
 
         <li>
-          <img src="Images/related-3.jpg" alt="" height="75" width="75" />
+          <img
+            src="https://user-images.githubusercontent.com/102797630/168083074-485f3c8f-e4ac-4e58-93c5-5e957fad8243.jpg"
+            alt=""
+            height="75"
+            width="75"
+          />
           <a href="#">Why Javascript is Awesome</a>
           <p class="related-author">By Matilda</p>
         </li>
