--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
         <li>
           <img
-            src="https://user-images.githubusercontent.com/102797630/168083067-58d17a68-2839-4b21-ad28-aeed749ef871.jpg"
+            src="https://user-images.githubusercontent.com/102797630/168083067-58d17a68-2839-4b21-ad28-aeed749ef871.JPG"
             alt="lightning"
             height="75"
             width="75"
