--- a/index.html
+++ b/index.html
@@ -141,5 +141,7 @@
       </aside>
       <footer>Copyright &copy; 2027 by The Code Magazine</footer>
     </div>
+
+    <button>💜Like</button>
   </body>
 </html>
